ViewModeSwitch/css/styles.css
body {
  font-family: 'Lato', Calibri, Arial, sans-serif;
  color: #47A3DA
}
.clearfix, .main { /* margins & padding for header & div.main */
  margin-left: auto;
  margin-right: auto;
  padding: 46px 30px 30px 30px;
  width: 90%;
}
header > span { /* "Blueprint" */
  font-size: 18px;
  text-transform: uppercase;
  letter-spacing: 4px;
}
header > h1 {
  font-size: 36px;
}
header > nav {
  float: right;
}

[class*='column-'] { /* selects all columns and makes them next to eachother */
  float: left;
  width: 33%;
}

/* Clear content- parent element (div.grid) will collapse to zero height since
it only has floated children. Fixes by clearing it */
.grid::after {
  content: "";
  display: table;
  clear: both;
}

/* GUTTERS */
/* 1st step */
/**, *::after, *::before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  width: 100%
} /* now when we set w, that element stays that w, */
/*despite padding or borders being applied.*/

/* 2nd step- apply fixed padding to right side of all columns except last one */
[class*='column-'] {
  padding-right: 20px;
}
[class*='column-']:last-of-type {
  padding-right: 0;
}

/* OUTSIDE GUTTERS */
/* 1st step- add padding to grid parent */
.grid-pad {
  padding: 20px 0 20px 20px 20px;
}
/* 2nd step- restore right pading to last column */
.grid-pad > [class*='column-']:last-of-type {
  padding-right: 20px;
}

